--- a/LMS.Api/LMS.Api.csproj
+++ b/LMS.Api/LMS.Api.csproj
@@ -13,6 +13,8 @@
   <ItemGroup>
     <ProjectReference Include="..\LMS.Application\LMS.Application.csproj" />
     <ProjectReference Include="..\LMS.Common\LMS.Common.csproj" />
+    <ProjectReference Include="..\LMS.Domain\LMS.Domain.csproj" />
+    <ProjectReference Include="..\LMS.Infrastructure\LMS.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
