--- a/RPGHub.Common/RPGHub.Common.csproj
+++ b/RPGHub.Common/RPGHub.Common.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="DTOs\Stuff\**" />
+    <EmbeddedResource Remove="DTOs\Stuff\**" />
+    <None Remove="DTOs\Stuff\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="8.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
@@ -16,10 +22,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RPGHub.Domain\RPGHub.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="DTOs\Stuff\" />
   </ItemGroup>
 
 </Project>
